# captain-scarlet

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .notes.md  404.html  DESCRIPTION  LICENSE  LICENSE.md  README.md  captain-scarlet.Rproj  data.csv  dave-e.html  dummy-data.csv  dummy-notes.rmd  eddy.html  filtered.csv  flask_app.py  flora_format.R  graph.r  hello-world.py  index.htm  index.html  jacob.html  james-he.html  joe.html  lib.html  mags.html  makefile  makefile.env  mkdocs.yml  model.r  notes.rmd  otis-food.html  otis-styles.css  pyproject.toml  questionnaire-data.csv  questionnaire-notes.docx  questionnaire-notes.rmd  questionnaire.sty  questionnaire.tex  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  postCreate.sh  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: docs.yml
R/: sedn2brc copy.R  sedn2brc.R  tbl_edit.R
R/demos/: dates.R  demo.Rmd  graph.r
R/scraps/: sedn_format.R
brc_fields/: index.html
chatgpt-suggestions/: index.html
docs/: brc_fields.md  chatgpt-suggestions.md  index.md  sedn_fields.md
python/: shit.py
search/: search_index.json
sedn_fields/: index.html
src_python/: shit.py  test.py
src_python/package/: shit.py  test.py
src_python/pytest_unit/: shit_test.py
src_r/: graph.r  sedn2brc.R
src_r/data/: sedn_format.R  split_data_file.R  splitter.R
src_r/tests/: test_sedn2brc.R  test_tbl_editing.R
tests/: testthat.R
tests/pytest/: shit_test.py
tests/testthat/: test_tbl_edit.R
