[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "captain_scarlet"
version = "0.0.1"
description = "Data and dates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "lxml",
        "mkdocs",
        "mkdocs-mermaid2-plugin",
        "mkdocs-roamlinks-plugin"
]

[project.optional-dependencies]
test = [
    "flake8",  # used for code linting, not needed for production.
    "mypy",  # used for type checking, not needed for production.
    "pytest",  # used for testing, not needed for production.
]
dev = [
    "black",  # used for code formatting, not needed for production.
    "debugpy",  # only required for debugging, not needed for production.
    "ipython",  # used for debugging, not needed for production.
]

[tool.setuptools]
py-modules = [
    "src_python"
]  #  Disable auto discovery of modules (and only include the ones we specifically want).

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    |\.git
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__"
]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --disable-warnings --cache-clear"
testpaths = [
    "./src_python/pytest_unit"
]
